Thêm Enity Code First

--- a/4BroShop/4BroShop.csproj
+++ b/4BroShop/4BroShop.csproj
@@ -176,6 +176,14 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\EFModels\Category.cs" />
+    <Compile Include="Models\EFModels\CommonAbstract.cs" />
+    <Compile Include="Models\EFModels\Contact.cs" />
+    <Compile Include="Models\EFModels\Order.cs" />
+    <Compile Include="Models\EFModels\OrderDetail.cs" />
+    <Compile Include="Models\EFModels\Product.cs" />
+    <Compile Include="Models\EFModels\ProductCategory.cs" />
+    <Compile Include="Models\EFModels\ProductImage.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
