--- a/4BroShop/Web.config
+++ b/4BroShop/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-R7BSKRU;Initial Catalog=Db4BroShop;Integrated Security=True;trustservercertificate=True;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-5LKG52G\SQLEXPRESS;Initial Catalog=Db4BroShop;Integrated Security=True;trustservercertificate=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
